# tailor

./: .gitignore  LICENSE  README.md  meson.build
data/: com.paysonwallach.tailor.desktop  com.paysonwallach.tailor.gschema.xml  meson.build
src/: Main.vala
